--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "nike-code-assessment",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://bestevez32.github.io/react-form/",
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "gh-pages": "^2.1.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
@@ -13,6 +15,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
